--- a/theme/templates/includes/checkbox_field.html
+++ b/theme/templates/includes/checkbox_field.html
@@ -1,10 +1,12 @@
+{% load widget_tweaks %}
+
 {% if field.is_hidden %}
     {{ field }}
 {% else %}
-    <fieldset {% if readonly %}disabled="disabled"{% endif %} class="form-group form-group-checkbox input_{{ field.id_for_label }} {{ field.field.type }}
+    <fieldset class="form-group form-group-checkbox input_{{ field.id_for_label }} {{ field.field.type }}
         {% if field.errors %} has-error{% endif %} {{ field_classes }}">
 
-        {{ field }}
+        {% render_field field readonly=readonly %}
 
         {% if field.label %}
             <label class="control-label" for="{{ field.auto_id }}">{{ field.label }}</label>
