--- a/theme/templates/includes/form_field.html
+++ b/theme/templates/includes/form_field.html
@@ -1,14 +1,16 @@
+{% load widget_tweaks %}
+
 {% if field.is_hidden %}
     {{ field }}
 {% else %}
-    <fieldset {% if readonly %}disabled="disabled"{% endif %} class="form-group input_{{ field.id_for_label }} {{ field.field.type }}
+    <fieldset class="form-group input_{{ field.id_for_label }} {{ field.field.type }}
     {% if field.errors %} has-error{% endif %} {{ field_classes }}">
 
     {% if field.label %}
         <label class="control-label" for="{{ field.auto_id }}">{{ field.label }}</label>
     {% endif %}
 
-    {{ field }}
+    {% render_field field readonly=readonly %}
 
     {% if field.errors %}
         <p class="help-block">
