--- a/ref_ts/templates/pages/create-ref-time-series.html
+++ b/ref_ts/templates/pages/create-ref-time-series.html
@@ -114,9 +114,7 @@
 
             function check_url(url){
                 globurl = url;
-                $('#url-input').removeClass("has-success");
-                $('#url-input').removeClass("has-error");
-                $('#fail-notice').hide();
+                $('#url-input').removeClass("has-success").removeClass("has-error").hide();
                 $('#loading-1-text').html('<h3></h3>');
 
                 if (url.match(/WSDL$/) || url.match(/wsdl$/)){
@@ -138,13 +136,11 @@
                             }
                             else if (data == 400 || data == 404) {
                                 $('#loading-1-text').html('<h3>URL did not verify. There may be a problem with the URL you entered</h3>');
-                                $('#url-input').removeClass("has-success");
-                                $('#url-input').addClass("has-error");
+                                $('#url-input').removeClass("has-success").addClass("has-error");
                             }
                         },
                         error: function(){
-                            $('#url-input').removeClass("has-success");
-                            $('#url-input').addClass("has-error");
+                            $('#url-input').removeClass("has-success").addClass("has-error");
                         }
                     });
                 }
@@ -156,22 +152,32 @@
             }
 
             function get_his_central_urls(){
+
                 $.ajax({
                     type: "GET",
                     url: '/hsapi/_internal/get-his-urls/',
                     success: function (data, xhr, status) {
-                        console.log("urls:" + data.length)
-                        var select = document.getElementsByName('url')[0];
-                        removeOptions(select);
-                        $('#his-loading')
-                                .html('HIS Central Servers available')
-                                .css('color', 'Green');
-                        for (var site in data) {
-                            var ln = (data[site]);
-                            var opt = document.createElement('option');
-                            opt.value = ln;
-                            opt.innerHTML = ln;
-                            select.appendChild(opt);
+                        if (data["status"] == "success")
+                        {
+                            console.log("urls:" + data["url_list"].length)
+                            var select = document.getElementsByName('url')[0];
+                            removeOptions(select);
+                            $('#his-loading')
+                                    .html('HIS Central Servers available')
+                                    .css('color', 'Green');
+                            for (var i=0; i < data["url_list"].length; i++) {
+                                var ln = data["url_list"][i];
+                                var opt = document.createElement('option');
+                                opt.value = ln;
+                                opt.innerHTML = ln;
+                                select.appendChild(opt);
+                            }
+                        }
+                        else
+                        {
+                            $('#his-loading')
+                                .html('HIS Central Servers currently not available')
+                                .css('color','Red');
                         }
                     },
                     error: function(){
@@ -193,43 +199,56 @@
                 $('#loading-1').show();
                 $('#loading-1-text').html('<h3>Retrieving Sites...</h3>');
                 $('.ui-autocomplete-input').prop("disabled", true);
+                $('.cuahsi-his-2').hide();
+                $('.cuahsi-his-3').hide();
                 $.ajax({
                     type:"GET",
                     url:'/hsapi/_internal/search-sites/',
                     data: {url: url},
                     success: function(data, xhr, status){
-                        console.log("site:" + data.length)
-                        var select = document.getElementsByName('site')[0];
-                        removeOptions(select);
-                        for(var site in data) {
-                            var ln = (data[site]);
-                            var opt = document.createElement('option');
-                            opt.value = ln;
-                            opt.innerHTML = ln;
-                            select.appendChild(opt);
+                        if(data["status"] == "success")
+                        {
+                            console.log("sites:" + data["sites"].length)
+                            var select = document.getElementsByName('site')[0];
+                            removeOptions(select);
+                            for(var i=0; i < data["sites"].length; i++)
+                            {
+                                var ln = data["sites"][i];
+                                var opt = document.createElement('option');
+                                opt.value = ln;
+                                opt.innerHTML = ln;
+                                select.appendChild(opt);
+                            }
                             $('.cuahsi-his-2').show();
                             $('#loading-1').hide();
                             $('.ui-autocomplete-input').prop("disabled", false);
                         }
+                        else
+                        {
+                           get_sites_failed();
+                        }
                     },
                     error: function(data, stuff){
-                        $('#loading-1-text').html('<h3">There was an error retrieving sites for this server</h3>');
-                                console.log(data);
-                        console.log(stuff);
-                        $('.ui-autocomplete-input').prop("disabled", false);
+                        get_sites_failed();
                     }
                 });
+            }
+
+            function get_sites_failed()
+            {
+                $('#loading-1-text').html('<h3">There was an error retrieving sites for this server</h3>');
+                $('.ui-autocomplete-input').prop("disabled", false);
             }
 
             function get_variables(site){
                 $('#loading-2').show();
                 site_code = site;
                 var url = globurl;
-
                 var b = $('#submit');
                 b.addClass('disabled');
                 $('#site').prop("disabled", true);
                 $('.ui-autocomplete-input').prop("disabled", true);
+                $('.cuahsi-his-3').hide();
 
                 $.ajax({
                     type:"GET",
@@ -237,52 +256,67 @@
                     data: {url: url,
                         site: site_code},
                     success: function(data, xhr, status){
-                        console.log("var:" + data.length);
-                        $('.cuahsi-his-3').show();
-                        var select = document.getElementsByName('variable')[0];
-                        removeOptions(select);
-                        for(var index in data) {
-                            var ln = ( data[index]);
-                            var opt = document.createElement('option');
-                            opt.value = ln;
-                            opt.innerHTML = ln;
-                            select.appendChild(opt);
+                        if(data["status"] == "success")
+                        {
+                            console.log("var:" + data["variables"].length);
+                            $('.cuahsi-his-3').show();
                             $('#site').prop("disabled", false);
                             $('.ui-autocomplete-input').prop("disabled", false);
-                            if (data.length == 1){
+                            $('#loading-2').hide();
+
+                            var select = document.getElementsByName('variable')[0];
+                            removeOptions(select);
+                            for(var i=0; i < data["variables"].length; i++)
+                            {
+                                var ln = data["variables"][i];
+                                var opt = document.createElement('option');
+                                opt.value = ln;
+                                opt.innerHTML = ln;
+                                select.appendChild(opt);
+                            }
+
+                            if (data["variables"].length == 1){
                                 $('#variable').trigger("change");
                             }
                         }
-                        $('#loading-2').hide();
+                        else
+                        {
+                            get_variables_failed();
+                        }
                     },
                     error: function(data, stuff) {
-                        $('#loading-2-text').html('<h3">There was an error retrieving variables for this site</h3>');
-                        console.log(data);
-                        console.log(stuff);
-                        $('#site').prop("disabled", false);
-                        $('.ui-autocomplete-input').prop("disabled", false);
+                        get_variables_failed();
                     }
                 })
             }
 
+            function get_variables_failed()
+            {
+                $('#loading-2-text').html('<h3">There was an error retrieving variables for this site</h3>');
+                $('#site').prop("disabled", false);
+                $('.ui-autocomplete-input').prop("disabled", false);
+            }
+
             function getVals(ref_type, _site, _var) {
-                $('#preview-div').html('<h2 class="col-sm-offset-2 col-sm-10">Retrieving Data . . .</h2>');
-                $('#preview-div').show();
+                $('#preview-div').html('<h2 class="col-sm-offset-2 col-sm-10">Retrieving Data . . .</h2>').show();
+                $('#site').prop("disabled", true);
+                $('.ui-autocomplete-input').prop("disabled", true);
+                $('#variable').prop("disabled", true);
+
                 var service_url = "";
                 var site = "";
                 var variable = "";
-                if (ref_type == 'rest') {
+                if (ref_type == 'rest')
+                {
                     service_url = globurl;
                 }
-                else {
+                else
+                {
                     service_url = globurl;
                     site = _site;
                     variable = _var;
                 }
 
-                $('#site').prop("disabled", true);
-                $('.ui-autocomplete-input').prop("disabled", true);
-                $('#variable').prop("disabled", true);
                 $.ajax({
                     type:"GET",
                     url:'/hsapi/_internal/time-series-from-service/',
@@ -291,30 +325,38 @@
                         site: site,
                         variable: variable},
                     success: function(data, xhr, status){
-                        var preview_url = data['preview_url'];
-                        $('#preview-div').html('<p style="text-align:center;"><img align="middle" src="'+ preview_url +'" id="preview-graph" class="col-sm-offset-2"/></p>');
-                        $('#preview-div').show();
-                        var b = $('#submit');
-                        b.removeClass('disabled');
-                        $('#loading-1').hide();
-                        $('#site').prop("disabled", false);
-                        $('#variable').prop("disabled", false);
-                        $('.ui-autocomplete-input').prop("disabled", false);
+                        if (data["status"] == "success")
+                        {
+                            var preview_url = data['preview_url'];
+                            $('#preview-div').html('<p style="text-align:center;"><img align="middle" src="'+
+                                    preview_url +'" id="preview-graph" class="col-sm-offset-2"/></p>').show();
+                            var b = $('#submit');
+                            b.removeClass('disabled');
+                            $('#loading-1').hide();
+                            $('#site').prop("disabled", false);
+                            $('#variable').prop("disabled", false);
+                            $('.ui-autocomplete-input').prop("disabled", false);
+                        }
+                        else
+                        {
+                            getVals_failed();
+                        }
                     },
                     error: function(data, stuff){
-                        $('#url-input').removeClass("has-success");
-                        $('#fail-notice').show();
-                        alert(data)
-                        alert(stuff)
-                        console.log(data);
-                        console.log(stuff);
-                        $('#preview-div').hide();
-                        $('#loading-1').hide();
-                        $('#site').prop("disabled", false);
-                        $('#variable').prop("disabled", false);
-                        $('.ui-autocomplete-input').prop("disabled", false);
+                        getVals_failed();
                     }
                 });
+            }
+
+            function getVals_failed()
+            {
+                $('#url-input').removeClass("has-success");
+                $('#fail-notice').show();
+                $('#preview-div').hide();
+                $('#loading-1').hide();
+                $('#site').prop("disabled", false);
+                $('#variable').prop("disabled", false);
+                $('.ui-autocomplete-input').prop("disabled", false);
             }
 
             $('#variable').change(function(){
@@ -468,9 +510,9 @@
         });
 
         $(function() {
-            $( "#url" ).combobox();
-            $( "#toggle" ).click(function() {
-                $( "#combobox" ).toggle();
+            $("#url").combobox();
+            $("#toggle").click(function() {
+                $("#combobox").toggle();
             });
         });
     </script>
