--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -155,6 +155,7 @@
                     <th>Permission Level</th>
                     <th>Labels</th>
                     <th>Favorite</th>
+                    <th>Sharing status</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -265,6 +266,15 @@
                             <td class="col-is-favorite">
                                 {% if res.is_favorite %}
                                     Favorite
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if res.raccess.public %}
+                                    <strong style="color:#5cb85c">&nbspPublic</strong>
+                                {% elif not res.raccess.public and res.raccess.discoverable %}
+                                    <strong style="color:#f0ad4e">&nbspDiscoverable</strong>
+                                {% elif not res.raccess.public and not res.raccess.discoverable %}
+                                    <strong style="color:#d9534f">&nbspPrivate</strong>
                                 {% endif %}
                             </td>
                         </tr>
@@ -410,6 +420,8 @@
                 "order": [[4, "asc"]],
                 "paging": false,
                 "info": false,
+                "scrollY": "523px",
+                "scrollCollapse": true,
                 "columnDefs": [
                     {
                         "targets": [1],     // Resource type
