--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -2039,59 +2039,66 @@
                 <h4 class="modal-title">Author</h4>
             </div>
             <div class="modal-body">
-                <table class="table table-bordered">
+                <table class="table" style="border: 1px solid #DDD;">
                     <tbody>
                         <tr>
+                            <td class="text-center"><i class="fa fa-user-circle" aria-hidden="true"></i></td>
                             <th>Name: </th>
                             <td>Lorem Ipsum.</td>
                         </tr>
                         <tr>
+                            <td class="text-center"><i class="fa fa-building" aria-hidden="true"></i></td>
                             <th>Organization:</th>
                             <td>Lorem ipsum dolor.</td>
                         </tr>
                         <tr>
+                            <td class="text-center"><i class="fa fa-envelope" aria-hidden="true"></i></td>
                             <th>Email:</th>
                             <td>Lorem@lorem.com</td>
                         </tr>
                         <tr>
+                            <td class="text-center"><i class="fa fa-map-marker" aria-hidden="true"></i></td>
                             <th>Address:</th>
                             <td>Lorem ipsum dolor sit.</td>
                         </tr>
                         <tr>
+                            <td class="text-center"><i class="fa fa-phone-square" aria-hidden="true"></i></td>
                             <th>Phone:</th>
                             <td>+1 (435) 363-5910</td>
                         </tr>
                         <tr>
+                            <td class="text-center"><i class="fa fa-globe" aria-hidden="true"></i></td>
                             <th>Homepage:</th>
                             <td>somehomepage.com</td>
                         </tr>
                         <tr>
+                            <td class="text-center"><i class="fa fa-external-link-square" aria-hidden="true"></i></td>
                             <th>Author Identifiers:</th>
                             <td>
                                 <div class="external-profiles">
-                    <a href="" data-googlescholarid class="identifier-icon" target="_blank" data-toggle="tooltip" data-placement="bottom"
-                       title="Google Scholar">
-                        <i class="ai ai-google-scholar-square hover-shadow"></i>
-                    </a>
-                    <a href="" data-orcid class="identifier-icon" target="_blank" data-toggle="tooltip" data-placement="bottom"
-                       title="ORCID">
-                        <i class="ai ai-orcid hover-shadow"></i>
-                    </a>
-                    <a href="" data-researchgateid class="identifier-icon" target="_blank" data-toggle="tooltip" data-placement="bottom"
-                       title="ResearchGate">
-                        <i class="ai ai-researchgate-square hover-shadow"></i>
-                    </a>
-                    <a href="" data-researcerid class="identifier-icon" target="_blank" data-toggle="tooltip" data-placement="bottom"
-                       title="ResearcherID">
-                        <img class="hover-shadow"
-                             src="{{ STATIC_URL }}img/researcherID.png"
-                             alt="ResearcherID icon"/>
-                    </a>
-                    <a href="" data-identifier-other class="identifier-icon" target="_blank" data-toggle="tooltip" data-placement="bottom"
-                       title="">
-                        <i class="fa fa-address-card hover-shadow"></i>
-                    </a>
-                </div>
+                                    <a href="" data-googlescholarid class="identifier-icon" target="_blank" data-toggle="tooltip" data-placement="bottom"
+                                       title="Google Scholar">
+                                        <i class="ai ai-google-scholar-square hover-shadow"></i>
+                                    </a>
+                                    <a href="" data-orcid class="identifier-icon" target="_blank" data-toggle="tooltip" data-placement="bottom"
+                                       title="ORCID">
+                                        <i class="ai ai-orcid hover-shadow"></i>
+                                    </a>
+                                    <a href="" data-researchgateid class="identifier-icon" target="_blank" data-toggle="tooltip" data-placement="bottom"
+                                       title="ResearchGate">
+                                        <i class="ai ai-researchgate-square hover-shadow"></i>
+                                    </a>
+                                    <a href="" data-researcerid class="identifier-icon" target="_blank" data-toggle="tooltip" data-placement="bottom"
+                                       title="ResearcherID">
+                                        <img class="hover-shadow"
+                                             src="{{ STATIC_URL }}img/researcherID.png"
+                                             alt="ResearcherID icon"/>
+                                    </a>
+                                    <a href="" data-identifier-other class="identifier-icon" target="_blank" data-toggle="tooltip" data-placement="bottom"
+                                       title="">
+                                        <i class="fa fa-address-card hover-shadow"></i>
+                                    </a>
+                                </div>
                             </td>
                         </tr>
                     </tbody>
